examples/bad/SpacingTokens.tsx
export function SpacingTokens() {
  return <section style={{ padding: 18, marginTop: "12px" }}>Settings</section>;
}
